M3: filter aangepast productdetails pagina's aangepast

--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -6,21 +6,18 @@
 </head>
 <body>
 <h1>Producten Pagina</h1>
-<section>
-    <h2>Producten</h2>
-    <header>
-        <nav>
-            <h3>Menu</h3>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="Producten.html">Producten</a></li>
-                <li><a href="Personalisering.html">Personalisering</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="FAQ.html">FAQ</a></li>
-            </ul>
-        </nav>
-    </header>
-</section>
+<header>
+    <nav>
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="Producten.html">Producten</a></li>
+            <li><a href="Personalisering.html">Personalisering</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
+        </ul>
+    </nav>
+</header>
 <main>
     <section>
         <h2>Overzicht</h2>
@@ -34,27 +31,29 @@
             </section>
             <section>
                 <a href="RBGKeyboardWit.html"><img src="../media/membraneKeyboard/RBGKeyboardWit.jpg"
-                                                        alt="Membrane keyboard wit met RBG lichten"></a>
+                                                   alt="Membrane keyboard wit met RBG lichten"></a>
                 <h4>Membrane keyboard wit met RBG lichten</h4>
                 <p> 24,99 euro</p>
             </section>
 
             <section>
                 <a href="CompactZwartKeyboard.html"><img src="../media/membraneKeyboard/CompactZwartKeyboard.jpg"
-                                                        alt="Compact zwart Keyboard"></a>
+                                                         alt="Compact zwart Keyboard"></a>
                 <h4>Compact zwart Keyboard</h4>
                 <p> 10 euro</p>
             </section>
 
             <section>
-                <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg" alt="Ergonomic zwart keyboard"></a>
+                <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg"
+                                                           alt="Ergonomic zwart keyboard"></a>
                 <h4>Ergonomic zwart keyboard</h4>
                 <p> 19,99 euro</p>
             </section>
 
             <section>
-                <a href="TypeMachineStijlWitKeyboard.html"><img src="../media/membraneKeyboard/TypeMachineStijlWitKeyboard.jpg"
-                                                        alt="Type machine stijl wit keyboard"></a>
+                <a href="TypeMachineStijlWitKeyboard.html"><img
+                        src="../media/membraneKeyboard/TypeMachineStijlWitKeyboard.jpg"
+                        alt="Type machine stijl wit keyboard"></a>
                 <h4>Type machine stijl wit keyboard</h4>
                 <p> 30 euro</p>
             </section>
@@ -110,7 +109,8 @@
                 <p>50 euro</p>
             </section>
             <section>
-                <img src="../media/mechanicalKeyboard/SuperComfortabelBlackErgonomicKeyboard.jpg" alt="Super comfortabel Black Ergonomic Keyboard">
+                <img src="../media/mechanicalKeyboard/SuperComfortabelBlackErgonomicKeyboard.jpg"
+                     alt="Super comfortabel Black Ergonomic Keyboard">
                 <h4>Super comfortabel Black Ergonomic Keyboard</h4>
                 <p>20 euro</p>
             </section>
@@ -135,7 +135,8 @@
                 <p>22,99 euro</p>
             </section>
             <section>
-                <img src="../media/gamingKeyboard/DraadlozeZwartBlauwKeyboard.jpg" alt="Draadloze Zwart Keyboard met blauw lichten">
+                <img src="../media/gamingKeyboard/DraadlozeZwartBlauwKeyboard.jpg"
+                     alt="Draadloze Zwart Keyboard met blauw lichten">
                 <h4>Draadloze Zwart Keyboard met blauw lichten</h4>
                 <p>35 euro</p>
             </section>
@@ -157,9 +158,9 @@
         </section>
         <section>
             <h3>filter</h3>
-            <p>Ergonomic keyboards</p>
-            <p>compact keyboards</p>
-            <p>RBG lichten</p>
+            <p>type : ergonomic, opvouwbaar</p>
+            <p>grootte: compact, full size</p>
+            <p>Lichten: RBG, blauwe, groene, rode, geen lichten</p>
         </section>
     </section>
 </main>
