--- a/examenproject/html/TypeMachineStijlWitKeyboard.html
+++ b/examenproject/html/TypeMachineStijlWitKeyboard.html
@@ -6,33 +6,28 @@
 </head>
 <body>
 <h1>productDetail Pagina</h1>
-<section>
-    <h2>ProductDetail : TypeMachineStijlWitKeyboard</h2>
-    <header>
-        <nav>
-            <h3>Menu</h3>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="Producten.html">Producten</a></li>
-                <li><a href="Personalisering.html">Personalisering</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="FAQ.html">FAQ</a></li>
-            </ul>
-        </nav>
-        <section>
-            <h3>hier bevindt u zich</h3>
-            <ol>
-                <li><a href=Producten.html>Producten</a></li>
-                <li><a href=productdetailpagina.html>productdetail</a></li>
-            </ol>
-        </section>
-    </header>
-</section>
+<header>
+    <nav>
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="Producten.html">Producten</a></li>
+            <li><a href="Personalisering.html">Personalisering</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
+        </ul>
+    </nav>
+    <ol>
+        <li><a href=Producten.html>Producten</a></li>
+        <li><a href=productdetailpagina.html>productdetail</a></li>
+    </ol>
+</header>
 <main>
     <section>
         <h2>Product</h2>
         <section>
-            <img src="../media/membraneKeyboard/TypeMachineStijlWitKeyboardHD.jpg" alt="Type machine stijl wit keyboard">
+            <img src="../media/membraneKeyboard/TypeMachineStijlWitKeyboardHD.jpg"
+                 alt="Type machine stijl wit keyboard">
             <h3>Type machine stijl wit keyboard </h3>
             <p> 30 euro</p>
         </section>
