voorloop spaties weggedaan bij alt img

--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -21,9 +21,9 @@
 <main>
     <section>
         <h2>Overzicht</h2>
-        <section>
+        <section class="row">
             <h3>Membrane keyboards</h3>
-            <section>
+            <section class="column">
                 <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
                                                         alt="Membrane keyboard zwart met RBG lichten"></a>
                 <h4>Membrane keyboard zwart met RBG lichten</h4>
@@ -125,7 +125,7 @@
         <section>
             <h3>Gaming keyboards</h3>
             <section>
-                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt=" Razer keyboard mini">
+                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt="Razer keyboard mini">
                 <h4>Razer keyboard mini met RBG lichten</h4>
                 <p>15 euro</p>
             </section>
@@ -146,7 +146,7 @@
                 <p>40 euro</p>
             </section>
             <section>
-                <img src="../media/gamingKeyboard/MiniGamingKeyboardWit.png" alt=" Mini Gaming Keyboard Wit">
+                <img src="../media/gamingKeyboard/MiniGamingKeyboardWit.png" alt="Mini Gaming Keyboard Wit">
                 <h4>Mini Gaming Keyboard Wit</h4>
                 <p>10 euro</p>
             </section>
