M3: voorloop spaties weggedaan bij alt img

--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -21,9 +21,9 @@
 <main>
     <section>
         <h2>Overzicht</h2>
-        <section class="row">
+        <section>
             <h3>Membrane keyboards</h3>
-            <section class="column">
+            <section>
                 <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
                                                         alt="Membrane keyboard zwart met RBG lichten"></a>
                 <h4>Membrane keyboard zwart met RBG lichten</h4>
