--- a/examenproject/html/Contact.html
+++ b/examenproject/html/Contact.html
@@ -2,44 +2,44 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Contact</title>
+    <title>Voedsel en gedrag</title>
+    <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
-<h1>Contact Pagina</h1>
-<header>
+<body class="grid">
+<h1 class="verborgen">Contact Pagina</h1>
+<header class="panel grid-header">
     <nav>
-        <h2>Menu</h2>
+        <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="Producten.html">Producten</a></li>
             <li><a href="Personalisering.html">Personalisering</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a class="current" href="Contact.html">Contact</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
 </header>
-<main>
-    <section>
+<main class="panel grid-main">
+    <section class="contactgegevens">
         <h2>Contactgegevens</h2>
-        <section>
+        <section id="naam">
             <h3>Naam</h3>
             <p>Muhammet Murat</p>
         </section>
-        <section>
+        <section id="email">
             <h3>Email</h3>
             <a href="mailto:muhammet.murat@student.kdg.be">muhammet.murat@student.kdg.be</a>
         </section>
-        <section>
+        <section id="telefoon">
             <h3>Telefoonnummer</h3>
             <p>04810 21 54 05</p>
         </section>
-        <section>
+        <section id="adres">
             <h3>Adres</h3>
             <p>Nationalestraat 5, 2000 Antwerpen</p>
-            <img src="../media/map.png" alt="map">
+            <img src="../../examenproject/media/map.png" alt="map">
         </section>
     </section>
-
 </main>
 </body>
 </html>
