--- a/examenproject/html/FAQ.html
+++ b/examenproject/html/FAQ.html
@@ -2,23 +2,24 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>FAQ</title>
+    <title>Bedreiging</title>
+    <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
-<h1>FAQ Pagina</h1>
-<header>
+<body class="grid">
+<h1 class="verborgen">FAQ Pagina</h1>
+<header class="panel grid-header">
     <nav>
-        <h2>Menu</h2>
+        <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="Producten.html">Producten</a></li>
             <li><a href="Personalisering.html">Personalisering</a></li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a class="current" href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
 </header>
-<main>
+<main class="panel grid-main">
     <section>
         <h2>8 meest gestelde vragen</h2>
         <dl>
@@ -67,7 +68,6 @@
             </dd>
         </dl>
     </section>
-
 </main>
 </body>
 </html>
