--- a/examenproject/html/TypeMachineStijlWitKeyboard.html
+++ b/examenproject/html/TypeMachineStijlWitKeyboard.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Productdetailpagina</title>
+    <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
-<h1>productDetail Pagina</h1>
-<header>
+<body class="grid">
+<h1 class="verborgen">productDetail Pagina</h1>
+<header class="grid-header panel">
     <nav>
-        <h2>Menu</h2>
+        <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="Producten.html">Producten</a></li>
@@ -17,22 +18,19 @@
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
-    <ol>
-        <li><a href=Producten.html>Producten</a></li>
-        <li><a href=productdetailpagina.html>productdetail</a></li>
+    <ol class="breadcrumbs">
+        <li><a class="breadcrumbs__item" href=Producten.html>Producten</a></li>
+        <li><a class="breadcrumbs__item" href=productdetailpagina.html>productdetail</a></li>
     </ol>
 </header>
-<main>
-    <section>
-        <h2>Product</h2>
-        <section>
+<main class="grid-main panel">
+    <section class="detail">
             <img src="../media/membraneKeyboard/TypeMachineStijlWitKeyboardHD.jpg"
                  alt="Type machine stijl wit keyboard">
-            <h3>Type machine stijl wit keyboard </h3>
-            <p> 30 euro</p>
-        </section>
-        <section>
+            <h2>Type machine stijl wit keyboard </h2>
+        <section class="eigenschappen">
             <h3>Eigenschappen</h3>
+            <p>30 euro</p>
             <p>Met draad</p>
             <p>Het is morsbestendig</p>
             <p>het van metaal</p>
@@ -40,6 +38,5 @@
         </section>
     </section>
 </main>
-
 </body>
 </html>
