--- a/examenproject/html/productdetailpagina.html
+++ b/examenproject/html/productdetailpagina.html
@@ -2,13 +2,14 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>productdetailpagina</title>
+    <title>Verspreiding en leefgebied</title>
+    <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
-<h1>productDetail Pagina</h1>
-<header>
+<body class="grid">
+<h1 class="verborgen">productDetail Pagina</h1>
+<header class="panel grid-header">
     <nav>
-        <h2>Menu</h2>
+        <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="Producten.html">Producten</a></li>
@@ -17,18 +18,18 @@
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
-    <ol>
-        <li><a href=Producten.html>Producten</a></li>
-        <li><a href=productdetailpagina.html>productdetail</a></li>
+    <ol class="breadcrumbs">
+        <li><a class="breadcrumbs__item" href=Producten.html>Producten</a></li>
+        <li><a class="breadcrumbs__item" href=productdetailpagina.html>productdetail</a></li>
     </ol>
 </header>
-<main>
-    <section>
+<main class=" panel grid-main">
+    <section class="detail">
         <h2>Membrane keyboard zwart met RBG lights </h2>
-        <section>
-            <img src="../media/membraneKeyboard/RBGKeyboardZwartHD.jpg" alt="Membrane keyboard zwart met RBG lights">
+        <img src="../media/membraneKeyboard/RBGKeyboardZwartHD.jpg" alt="Membrane keyboard zwart met RBG lights">
+        <section class="eigenschappen">
             <h3>Eigenschappen </h3>
-            <p>19,99 euro</p>
+            <p>19,<sup>99</sup>euro</p>
             <p>Stille keyboard. Maakt bijna geen geluid</p>
             <p>Met draad</p>
             <p>Het is morsbestendig</p>
