--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -3,69 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="css/project.css">
 </head>
-<body>
-<h1>Home Pagina</h1>
-<header>
+<body class="index-grid">
+<header class="panel index-header">
+    <h1 class="verborgen">pagina</h1>
     <nav>
-        <h2>Menu</h2>
+        <h2 class="verborgen">Menu</h2>
         <ul>
-            <li>
-                <a href="./index.html">Home</a>
-            </li>
-            <li>
-                <a href="html/Producten.html">Producten</a>
-            </li>
-            <li>
-                <a href="html/Personalisering.html">Personalisering</a>
-            </li>
-            <li>
-                <a href="html/Contact.html">Contact</a>
-            </li>
-            <li>
-                <a href="html/FAQ.html">FAQ</a>
-            </li>
+            <li><a class="current" href="index.html">Home</a></li>
+            <li><a href="html/Producten.html">Producten</a></li>
+            <li><a href="html/Personalisering.html">Personalisering</a></li>
+            <li><a href="html/Contact.html">Contact</a></li>
+            <li><a href="html/FAQ.html">FAQ</a></li>
         </ul>
     </nav>
 </header>
-<main>
-    <section>
+<main class="panel index-main">
+    <section class="flex1">
         <h2>mijn product </h2>
-        <img src="media/toetsenbord_opt.jpg" alt="Toetsenbord">
-        <p>Welkom op mijn webshop. Hier kunt u toetsenborden vinden van verschillende designs.</p>
+        <img src="../examenproject/media/toetsenbord_opt.jpg" alt="Toetsenbord">
+        <p><em>Welkom</em> op mijn webshop.</p>
+        <p>Hier kunt u toetsenborden vinden van verschillende designs.</p>
     </section>
-    <section>
-        <h2>getuigenissen</h2>
-        <section>
-            <h3>getuigenis 1</h3>
-            <p>Voor ik deze webshop had gevonden had ik problemen met het zoeken naar een goede toetsenbord.</p>
-            <p>ik kocht elke keer een nieuw toetsenbord omdat het toetsenbord niet genoeg stevig was of de toetsen
-                gingen
-                steeds eruit.</p>
-            <p>Maar dat werd allemaal opgelost toen ik deze webshop vond. Ik kon hier mijn gewenste toetsenbord vinden
-                en
-                special voor mezelf personaliseren.</p>
-        </section>
-        <section>
-            <h3>getuigenis 2</h3>
-            <p>Het beste vindt ik dat er verschillende toetsenborden zijn waardoor ik direct de perfecte product voor
-                mij
-                kan vinden.</p>
-            <p>Ik vond het ook handig dat ik het kon aanpassen aan mijn eigen stijl.</p>
-            <p>En het is ook handig als je iemand een cadeau wilt geven</p>
-        </section>
-        <section>
-            <h3>getuigenis 3</h3>
-            <p>Ik ga deze webshop aan iedereen aanraden. Het is snel, makkelijk navigeerbaar.</p>
-            <p>Ik weet altijd waar ik ben en het heeft een groot assortiment aan toetsenbord.</p>
-        </section>
-    </section>
-    <section>
+    <section class="flex2">
         <h2>about me</h2>
         <section>
             <h3>mezelf</h3>
             <p>Welkom op mijn webshop.</p>
-            <p>Ik ben <strong>Muhammet Murat</strong> Murat en volg de richting toegepaste informatica op KDG.</p>
+            <p>Ik ben <strong>Muhammet Murat</strong> en volg de richting toegepaste informatica op <abbr
+                    title="Karel de Grote Hogeschool">KDG</abbr>.</p>
             <p>Voor een project heb ik deze webshop.</p>
         </section>
         <section>
@@ -74,6 +41,28 @@
                 still staan dat er verschillende soorten zijn met allemaal hun eigen functie.</p>
         </section>
     </section>
+    <article class="flex3">
+        <h2>getuigenissen</h2>
+        <section>
+            <h3>getuigenis 1</h3>
+            <p>Voor ik deze webshop had gevonden had ik problemen met het zoeken naar een goed toetsenbord.
+                Ik kocht elke keer een nieuw toetsenbord omdat het toetsenbord niet genoeg stevig was of de toetsen
+                gingen steeds eruit.
+                Maar dat werd allemaal opgelost toen ik deze webshop vond. Ik kon hier mijn gewenste toetsenbord vinden
+                en special voor mezelf personaliseren.</p>
+        </section>
+        <section>
+            <h3>getuigenis 2</h3>
+            <p>Het beste vindt ik dat er verschillende toetsenborden zijn waardoor ik direct de perfecte product voor
+                mij kan vinden. Ik vond het ook handig dat ik het kon aanpassen aan mijn eigen stijl.
+                En het is ook handig als je iemand een cadeau wilt geven</p>
+        </section>
+        <section>
+            <h3>getuigenis 3</h3>
+            <p>Ik ga deze webshop aan iedereen aanraden. Het is snel, makkelijk navigeerbaar.
+                Ik weet altijd waar ik ben en het heeft een groot assortiment aan toetsenbord.</p>
+        </section>
+    </article>
 </main>
 </body>
 </html>
