--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -2,168 +2,201 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Product</title>
+    <title>Kenmerken</title>
+    <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
-<h1>Producten Pagina</h1>
-<header>
+<body class="grid">
+<h1 class="verborgen">Producten Pagina</h1>
+<header class="panel grid-header">
     <nav>
-        <h2>Menu</h2>
+        <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="Producten.html">Producten</a></li>
+            <li class="submenu"><a class="current" href="Producten.html">Producten</a>
+                <ul>
+                    <li><a href="productdetailpagina.html">product</a></li>
+                </ul>
+            </li>
             <li><a href="Personalisering.html">Personalisering</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
 </header>
-<main>
-    <section>
-        <h2>Overzicht</h2>
-        <section>
-            <h3>Membrane keyboards</h3>
-            <section>
-                <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
-                                                        alt="Membrane keyboard zwart met RBG lichten"></a>
-                <h4>Membrane keyboard zwart met RBG lichten</h4>
-                <p> 19,99 euro</p>
+<main class="panel grid-main">
+    <section class="producten">
+        <h2 class="verborgen">Overzicht</h2>
+        <form action="Producten.html">
+            <input type="radio" id="ergonomic" name="type" value="ergonomic" class="ergonomic">
+            <input type="radio" id="opvouwbaar" name="type" value="opvouwbaar" class="opvouwbaar">
+            <input type="radio" id="normaal" name="type" value="normaal" class="normaal">
+            <input type="radio" id="compact" name="grootte" value="compact" class="compact">
+            <input type="radio" id="fullSize" name="grootte" value="full size" class="full size">
+            <input type="radio" id="RBG" name="Lichten" value="RBG" class="RBG">
+            <input type="radio" id="blauwe" name="Lichten" value="blauwe" class="blauwe">
+            <input type="radio" id="groene" name="Lichten" value="groene" class="groene">
+            <input type="radio" id="rode" name="Lichten" value="rode" class="rode">
+            <input type="radio" id="geenLichten" name="Lichten" value="geen lichten" class="geen lichten">
+            <section id="filter">
+                <h3>filter</h3>
+                <section>
+                    <input type="reset" id="reset">
+                    <h4 class="filterType">type</h4>
+                    <label for="ergonomic" class="ergonomicLabel">ergonomic</label>
+                    <label for="opvouwbaar" class="opvouwbaarLabel">opvouwbaar</label>
+                    <label for="normaal" class="normaalLabel">normaal</label>
+                </section>
+                <section>
+                    <h4 class="filtergrootte">grootte</h4>
+                    <label for="compact" class="compactLabel">compact</label>
+                    <label for="fullSize" class="fullSizeLabel">full size</label>
+                </section>
+                <section>
+                    <h4 class="filterLichten">Lichten</h4>
+                    <label for="RBG" class="RBGlabel">RBG</label>
+                    <label for="blauwe" class="blauweLabel">blauwe</label>
+                    <label for="groene" class="groeneLabel">groene</label>
+                    <label for="rode" class="rodeLabel">rode</label>
+                    <label for="geenLichten" class="geenLichtenLabel">geen lichten</label>
+                </section>
             </section>
-            <section>
-                <a href="RBGKeyboardWit.html"><img src="../media/membraneKeyboard/RBGKeyboardWit.jpg"
-                                                   alt="Membrane keyboard wit met RBG lichten"></a>
-                <h4>Membrane keyboard wit met RBG lichten</h4>
-                <p> 24,99 euro</p>
+            <section class="row">
+                <h3 class="h">Membrane keyboards</h3>
+                <section class="column card RBG fullSize normaal">
+                    <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
+                                                                       alt="Membrane keyboard zwart met RBG lichten"></a>
+                    <h4>Membrane keyboard zwart met RBG lichten</h4>
+                    <p>19,<sup>99</sup>euro</p>
+                </section>
+                <section class="column card RBG fullSize normaal">
+                    <a href="RBGKeyboardWit.html"><img src="../media/membraneKeyboard/RBGKeyboardWit.jpg"
+                                                                                alt="Membrane keyboard wit met RBG lichten"></a>
+                    <h4>Membrane keyboard wit met RBG lichten</h4>
+                    <p>24,<sup>99</sup>euro</p>
+                </section>
+
+                <section class="column card compact geenLichten normaal">
+                    <a href="CompactZwartKeyboard.html"><img src="../media/membraneKeyboard/CompactZwartKeyboard.jpg"
+                                                                                      alt="Compact zwart Keyboard"></a>
+                    <h4>Compact zwart Keyboard</h4>
+                    <p>10 euro</p>
+                </section>
+
+                <section class="column card ergonomic geenLichten fullSize">
+                    <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg"
+                                                                                        alt="Ergonomic zwart keyboard"></a>
+                    <h4>Ergonomic zwart keyboard</h4>
+                    <p>19,<sup>99</sup>euro</p>
+                </section>
+
+                <section class="column card fullSize geenLichten normaal">
+                    <a href="TypeMachineStijlWitKeyboard.html"><img
+                            src="../media/membraneKeyboard/TypeMachineStijlWitKeyboard.jpg"
+                            alt="Type machine stijl wit keyboard"></a>
+                    <h4>Type machine keyboard</h4>
+                    <p>30 euro</p>
+                </section >
+
+                <section class="column card normaal fullSize geenLichten">
+                    <img src="../media/membraneKeyboard/KeyboardMetTouchpad.jpg" alt="Keyboard Met Touchpad">
+                    <h4>Keyboard Met Touchpad</h4>
+                    <p>40 euro</p>
+                </section>
+
+                <section class="column card opvouwbaar fullSize geenLichten">
+                    <img src="../media/membraneKeyboard/OpvouwbaarKeyboard.jpg" alt="Opvouwbaar Keyboard">
+                    <h4>Opvouwbaar keyboard</h4>
+                    <p>35 euro</p>
+                </section>
+
+                <section class="column card opvouwbaar fullSize geenLichten">
+                    <img src="../media/membraneKeyboard/SiliconeKeyboard.jpg" alt="Silicone Keyboard">
+                    <h4>Silicone Keyboard</h4>
+                    <p>4,<sup>99</sup>euro</p>
+                </section>
+
             </section>
 
-            <section>
-                <a href="CompactZwartKeyboard.html"><img src="../media/membraneKeyboard/CompactZwartKeyboard.jpg"
-                                                         alt="Compact zwart Keyboard"></a>
-                <h4>Compact zwart Keyboard</h4>
-                <p> 10 euro</p>
+            <section class="row">
+                <h3>Mechanical keyboards</h3>
+                <section class="column card compact blauwe normaal">
+                    <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
+                         alt="Compact mechanical keyboard zwart met blauwe lichten">
+                    <h4>Compact mechanical keyboard met blauwe lichten</h4>
+                    <p>20 euro</p>
+                </section>
+                <section class="column card fullSize groene ergonomic">
+                    <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
+                    <h4>Ergonomic keyboard groen</h4>
+                    <p>13 euro</p>
+                </section>
+                <section class="column card fullSize blauwe normaal">
+                    <img src="../media/mechanicalKeyboard/DraadlozeWitKeyboard.jpg"
+                         alt="Draadloze Wit Keyboard">
+                    <h4>Draadloze Wit Keyboard</h4>
+                    <p>21,<sup>99</sup>euro</p>
+                </section>
+                <section class="column card fullSize RBG normaal">
+                    <img src="../media/mechanicalKeyboard/LogitechGWiKeyboard.png" alt="Logitech G Wit Keyboard">
+                    <h4>Logitech G Wit Keyboard</h4>
+                    <p>33 euro</p>
+                </section>
+                <section class="column card fullSize rode normaal">
+                    <img src="../media/mechanicalKeyboard/MetaalZwartKeyboard.jpg"
+                         alt="Metaal Zwart Keyboard met lichten">
+                    <h4>Metaal Zwart Keyboard met lichten</h4>
+                    <p>50 euro</p>
+                </section>
+                <section class="column card fullSize geenLichten ergonomic">
+                    <img src="../media/mechanicalKeyboard/SuperComfortabelBlackErgonomicKeyboard.jpg"
+                         alt="Super comfortabel Black Ergonomic Keyboard">
+                    <h4>Super comfortabel Black Ergonomic Keyboard</h4>
+                    <p>20 euro</p>
+                </section>
+                <section class="column card fullSize geenLichten normaal">
+                    <img src="../media/mechanicalKeyboard/professionalZwartKeyboard.jpg"
+                         alt="professional Zwart Keyboard">
+                    <h4>Professional zwart keyboard</h4>
+                    <p>30 euro</p>
+                </section>
             </section>
 
-            <section>
-                <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg"
-                                                           alt="Ergonomic zwart keyboard"></a>
-                <h4>Ergonomic zwart keyboard</h4>
-                <p> 19,99 euro</p>
+            <section class="row">
+                <h3>Gaming keyboards</h3>
+                <section class="column card compact RBG normaal">
+                    <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt="Razer keyboard mini">
+                    <h4>Razer keyboard mini met RBG lichten</h4>
+                    <p>15 euro</p>
+                </section>
+                <section class="column card fullSize rode normaal">
+                    <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
+                    <h4>Zwart gaming keyboard met rode lichten</h4>
+                    <p>22,<sup>99</sup>euro</p>
+                </section>
+                <section class="column card fullSize blauwe normaal">
+                    <img src="../media/gamingKeyboard/DraadlozeZwartBlauwKeyboard.jpg"
+                         alt="Draadloze Zwart Keyboard met blauw lichten">
+                    <h4>Draadloze Zwart Keyboard met blauw lichten</h4>
+                    <p>35 euro</p>
+                </section>
+                <section class="column card fullSize RBG normaal">
+                    <img src="../media/gamingKeyboard/FullSizeGamingKeyboard.jpg" alt="Full Size Gaming Keyboard">
+                    <h4>Full size gaming keyboard</h4>
+                    <p>40 euro</p>
+                </section>
+                <section class="column card compact RBG normaal">
+                    <img src="../media/gamingKeyboard/MiniGamingKeyboardWit.png" alt="Mini Gaming Keyboard Wit">
+                    <h4>Mini Gaming Keyboard Wit</h4>
+                    <p>10 euro</p>
+                </section>
+                <section class="column card fullSize RBG normaal">
+                    <img src="../media/gamingKeyboard/WitZwartRBGKeyboard.jpg" alt="Wit Zwart RBG Keyboard">
+                    <h4>Wit en zwart RBG keyboard</h4>
+                    <p>24,<sup>99</sup>euro</p>
+                </section>
             </section>
-
-            <section>
-                <a href="TypeMachineStijlWitKeyboard.html"><img
-                        src="../media/membraneKeyboard/TypeMachineStijlWitKeyboard.jpg"
-                        alt="Type machine stijl wit keyboard"></a>
-                <h4>Type machine stijl wit keyboard</h4>
-                <p> 30 euro</p>
-            </section>
-
-            <section>
-                <img src="../media/membraneKeyboard/KeyboardMetTouchpad.jpg" alt="Keyboard Met Touchpad">
-                <h4>Keyboard Met Touchpad</h4>
-                <p>40 euro</p>
-            </section>
-
-            <section>
-                <img src="../media/membraneKeyboard/OpvouwbaarKeyboard.jpg" alt="Opvouwbaar Keyboard">
-                <h4>Opvouwbaar keyboard</h4>
-                <p> 35 euro</p>
-            </section>
-
-            <section>
-                <img src="../media/membraneKeyboard/SiliconeKeyboard.jpg" alt="Silicone Keyboard">
-                <h4>Silicone Keyboard</h4>
-                <p>4,99 euro</p>
-            </section>
-
-        </section>
-
-        <section>
-            <h3>Mechanical keyboards</h3>
-            <section>
-                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
-                     alt="Compact mechanical keyboard zwart met blauwe lichten">
-                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
-                <p>20 euro</p>
-            </section>
-            <section>
-                <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
-                <h4>Ergonomic keyboard groen</h4>
-                <p>13 euro</p>
-            </section>
-            <section>
-                <img src="../media/mechanicalKeyboard/DraadlozeWitKeyboard.jpg"
-                     alt="Draadloze Wit Keyboard">
-                <h4>Draadloze Wit Keyboard</h4>
-                <p>21,99 euro</p>
-            </section>
-            <section>
-                <img src="../media/mechanicalKeyboard/LogitechGWiKeyboard.png" alt="Logitech G Wit Keyboard">
-                <h4>Logitech G Wit Keyboard</h4>
-                <p>33 euro</p>
-            </section>
-            <section>
-                <img src="../media/mechanicalKeyboard/MetaalZwartKeyboard.jpg"
-                     alt="Metaal Zwart Keyboard met lichten">
-                <h4>Metaal Zwart Keyboard met lichten</h4>
-                <p>50 euro</p>
-            </section>
-            <section>
-                <img src="../media/mechanicalKeyboard/SuperComfortabelBlackErgonomicKeyboard.jpg"
-                     alt="Super comfortabel Black Ergonomic Keyboard">
-                <h4>Super comfortabel Black Ergonomic Keyboard</h4>
-                <p>20 euro</p>
-            </section>
-            <section>
-                <img src="../media/mechanicalKeyboard/professionalZwartKeyboard.jpg"
-                     alt="professional Zwart Keyboard">
-                <h4>Professional zwart keyboard</h4>
-                <p>30 euro</p>
-            </section>
-        </section>
-
-        <section>
-            <h3>Gaming keyboards</h3>
-            <section>
-                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt="Razer keyboard mini">
-                <h4>Razer keyboard mini met RBG lichten</h4>
-                <p>15 euro</p>
-            </section>
-            <section>
-                <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
-                <h4>Zwart gaming keyboard met rode lichten</h4>
-                <p>22,99 euro</p>
-            </section>
-            <section>
-                <img src="../media/gamingKeyboard/DraadlozeZwartBlauwKeyboard.jpg"
-                     alt="Draadloze Zwart Keyboard met blauw lichten">
-                <h4>Draadloze Zwart Keyboard met blauw lichten</h4>
-                <p>35 euro</p>
-            </section>
-            <section>
-                <img src="../media/gamingKeyboard/FullSizeGamingKeyboard.jpg" alt="Full Size Gaming Keyboard">
-                <h4>Full size gaming keyboard</h4>
-                <p>40 euro</p>
-            </section>
-            <section>
-                <img src="../media/gamingKeyboard/MiniGamingKeyboardWit.png" alt="Mini Gaming Keyboard Wit">
-                <h4>Mini Gaming Keyboard Wit</h4>
-                <p>10 euro</p>
-            </section>
-            <section>
-                <img src="../media/gamingKeyboard/WitZwartRBGKeyboard.jpg" alt="Wit Zwart RBG Keyboard">
-                <h4>Wit en zwart RBG keyboard</h4>
-                <p>24,99 euro</p>
-            </section>
-        </section>
-        <section>
-            <h3>filter</h3>
-            <p>type : ergonomic, opvouwbaar</p>
-            <p>grootte: compact, full size</p>
-            <p>Lichten: RBG, blauwe, groene, rode, geen lichten</p>
-        </section>
+        </form>
     </section>
 </main>
-
 </body>
 </html>
