filter gefixed, formulier aangepast,article vervangen door section

--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -14,7 +14,7 @@
             <li><a href="../index.html">Home</a></li>
             <li class="submenu"><a class="current" href="Producten.html">Producten</a>
                 <ul>
-                    <li><a href="productdetailpagina.html">product</a></li>
+                    <li><a href="productendetails/productdetailpagina.html">product</a></li>
                 </ul>
             </li>
             <li><a href="Personalisering.html">Personalisering</a></li>
@@ -31,7 +31,7 @@
             <input type="radio" id="opvouwbaar" name="type" value="opvouwbaar" class="opvouwbaar">
             <input type="radio" id="normaal" name="type" value="normaal" class="normaal">
             <input type="radio" id="compact" name="grootte" value="compact" class="compact">
-            <input type="radio" id="fullSize" name="grootte" value="full size" class="full size">
+            <input type="radio" id="FullSize" name="grootte" value="full size" class="fullSize">
             <input type="radio" id="RBG" name="Lichten" value="RBG" class="RBG">
             <input type="radio" id="blauwe" name="Lichten" value="blauwe" class="blauwe">
             <input type="radio" id="groene" name="Lichten" value="groene" class="groene">
@@ -49,7 +49,7 @@
                 <section>
                     <h4 class="filtergrootte">grootte</h4>
                     <label for="compact" class="compactLabel">compact</label>
-                    <label for="fullSize" class="fullSizeLabel">full size</label>
+                    <label for="FullSize" class="fullSizeLabel">full size</label>
                 </section>
                 <section>
                     <h4 class="filterLichten">Lichten</h4>
@@ -63,34 +63,34 @@
             <section class="row">
                 <h3 class="h">Membrane keyboards</h3>
                 <section class="column card RBG fullSize normaal">
-                    <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
-                                                                       alt="Membrane keyboard zwart met RBG lichten"></a>
+                    <a href="productendetails/productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
+                                                                             alt="Membrane keyboard zwart met RBG lichten"></a>
                     <h4>Membrane keyboard zwart met RBG lichten</h4>
                     <p>19,<sup>99</sup>euro</p>
                 </section>
                 <section class="column card RBG fullSize normaal">
-                    <a href="RBGKeyboardWit.html"><img src="../media/membraneKeyboard/RBGKeyboardWit.jpg"
-                                                                                alt="Membrane keyboard wit met RBG lichten"></a>
+                    <a href="productendetails/RBGKeyboardWit.html"><img src="../media/membraneKeyboard/RBGKeyboardWit.jpg"
+                                                                        alt="Membrane keyboard wit met RBG lichten"></a>
                     <h4>Membrane keyboard wit met RBG lichten</h4>
                     <p>24,<sup>99</sup>euro</p>
                 </section>
 
                 <section class="column card compact geenLichten normaal">
-                    <a href="CompactZwartKeyboard.html"><img src="../media/membraneKeyboard/CompactZwartKeyboard.jpg"
-                                                                                      alt="Compact zwart Keyboard"></a>
+                    <a href="productendetails/CompactZwartKeyboard.html"><img src="../media/membraneKeyboard/CompactZwartKeyboard.jpg"
+                                                                              alt="Compact zwart Keyboard"></a>
                     <h4>Compact zwart Keyboard</h4>
                     <p>10 euro</p>
                 </section>
 
                 <section class="column card ergonomic geenLichten fullSize">
-                    <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg"
-                                                                                        alt="Ergonomic zwart keyboard"></a>
+                    <a href="productendetails/ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg"
+                                                                                alt="Ergonomic zwart keyboard"></a>
                     <h4>Ergonomic zwart keyboard</h4>
                     <p>19,<sup>99</sup>euro</p>
                 </section>
 
                 <section class="column card fullSize geenLichten normaal">
-                    <a href="TypeMachineStijlWitKeyboard.html"><img
+                    <a href="productendetails/TypeMachineStijlWitKeyboard.html"><img
                             src="../media/membraneKeyboard/TypeMachineStijlWitKeyboard.jpg"
                             alt="Type machine stijl wit keyboard"></a>
                     <h4>Type machine keyboard</h4>
