--- a/examenproject/html/FAQ.html
+++ b/examenproject/html/FAQ.html
@@ -12,10 +12,14 @@
         <h2 class="verborgen">Menu</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="Producten.html">Producten</a></li>
+            <li class="submenu"><a class="current" href="Producten.html">Producten</a>
+                <ul>
+                    <li><a href="productendetails/productdetailpagina.html">product</a></li>
+                </ul>
+            </li>
             <li><a href="Personalisering.html">Personalisering</a></li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a class="current" href="FAQ.html">FAQ</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
 </header>
