--- a/examenproject/html/productendetails/productdetailpagina.html
+++ b/examenproject/html/productendetails/productdetailpagina.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Verspreiding en leefgebied</title>
-    <link rel="stylesheet" href="../css/project.css">
+    <link rel="stylesheet" href="../../css/project.css">
 </head>
 <body class="grid">
 <h1 class="verborgen">productDetail Pagina</h1>
@@ -11,22 +11,26 @@
     <nav>
         <h2 class="verborgen">Menu</h2>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="Producten.html">Producten</a></li>
-            <li><a href="Personalisering.html">Personalisering</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li class="submenu"><a class="current" href="../Producten.html">Producten</a>
+                <ul>
+                    <li><a href="productdetailpagina.html">product</a></li>
+                </ul>
+            </li>
+            <li><a href="../Personalisering.html">Personalisering</a></li>
+            <li><a href="../Contact.html">Contact</a></li>
+            <li><a href="../FAQ.html">FAQ</a></li>
         </ul>
     </nav>
     <ol class="breadcrumbs">
-        <li><a class="breadcrumbs__item" href=Producten.html>Producten</a></li>
+        <li><a class="breadcrumbs__item" href=../Producten.html>Producten</a></li>
         <li><a class="breadcrumbs__item" href=productdetailpagina.html>productdetail</a></li>
     </ol>
 </header>
 <main class=" panel grid-main">
     <section class="detail">
         <h2>Membrane keyboard zwart met RBG lights </h2>
-        <img src="../media/membraneKeyboard/RBGKeyboardZwartHD.jpg" alt="Membrane keyboard zwart met RBG lights">
+        <img src="../../media/membraneKeyboard/RBGKeyboardZwartHD.jpg" alt="Membrane keyboard zwart met RBG lights">
         <section class="eigenschappen">
             <h3>Eigenschappen </h3>
             <p>19,<sup>99</sup>euro</p>
