--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -11,8 +11,12 @@
     <nav>
         <h2 class="verborgen">Menu</h2>
         <ul>
-            <li><a class="current" href="index.html">Home</a></li>
-            <li><a href="html/Producten.html">Producten</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="submenu"><a class="current" href="html/Producten.html">Producten</a>
+                <ul>
+                    <li><a href="html/productendetails/productdetailpagina.html">product</a></li>
+                </ul>
+            </li>
             <li><a href="html/Personalisering.html">Personalisering</a></li>
             <li><a href="html/Contact.html">Contact</a></li>
             <li><a href="html/FAQ.html">FAQ</a></li>
@@ -41,7 +45,7 @@
                 still staan dat er verschillende soorten zijn met allemaal hun eigen functie.</p>
         </section>
     </section>
-    <article class="flex3">
+    <section class="flex3">
         <h2>getuigenissen</h2>
         <section>
             <h3>getuigenis 1</h3>
@@ -62,7 +66,7 @@
             <p>Ik ga deze webshop aan iedereen aanraden. Het is snel, makkelijk navigeerbaar.
                 Ik weet altijd waar ik ben en het heeft een groot assortiment aan toetsenbord.</p>
         </section>
-    </article>
+    </section>
 </main>
 </body>
 </html>
